--- a/sass/layouts/_professionalSummary.scss
+++ b/sass/layouts/_professionalSummary.scss
@@ -30,6 +30,7 @@
     .modal-body {
       border-top: 1px solid rgb(150, 147, 147);
       border-bottom: 1px solid rgb(150, 147, 147);
+      padding: 0 5rem;
 
       .statsItems {
         list-style: none;
@@ -74,7 +75,7 @@
 }
 
 @media (max-width: 700px) {
-  .professionalSummary {
+  section.professionalSummary {
     display: flex;
     flex-direction: column;
     margin-top: 0.5rem;
@@ -91,33 +92,36 @@
     }
 
     .rightSummary {
-      // display: none;
-      // display: flex;
-      // flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      // text-align: start;
       margin-left: 0;
       margin-top: 1rem;
       margin-bottom: 0;
       line-height: 3;
 
+      .modal {
+        max-width: 330px;
+        left: 3%;
+
+        .modal-dialog .modal-content .modal-body {
+          padding: 0 1rem;
+          line-height: 1.5;
+        }
+
+        .modal-dialog .modal-content .modal-body .rightModal {
+          padding: 0 1rem;
+
+          li.statsItems {
+            font-size: 1.2rem;
+            // color: red;
+          }
+        }
+      }
+
       .information {
         display: grid;
         grid-template-columns: 30% 5% 63%;
         font-size: 1.5rem;
-      }
-
-      .modal {
-        max-width: 350px;
-        .modal-dialog {
-          .modal-body {
-            li {
-              //   color: red;
-              font-size: 1rem;
-            }
-          }
-        }
       }
     }
   }
